Refactored intlookup, added ratings, added unit tests